--- a/OrganWeb/OrganWeb/Views/Account/LoginRegistro.cshtml
+++ b/OrganWeb/OrganWeb/Views/Account/LoginRegistro.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Models.LoginRegisterViewModel
+﻿@model OrganWeb.Models.Usuario.LoginRegisterViewModel
 @{
     Layout = "~/Views/Shared/_LoginStart.cshtml";
     ViewBag.Title = "Registro";
