--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Manutencao/Maquinas.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Manutencao/Maquinas.cshtml
@@ -1,7 +1,7 @@
 ﻿
-@model OrganWeb.Areas.Sistema.Models.ViewModels.ViewSementes
+@model OrganWeb.Areas.Sistema.Models.ViewModels.ViewMaquina
 @{
-    ViewBag.Title = "Sementes";
+    ViewBag.Title = "Máquinas";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -11,7 +11,7 @@
         <div class="col-md-8">
             <div class="card">
                 <div class="card-header">
-                    <h6 class="card-title box-title">Sementes</h6>
+                    <h6 class="card-title box-title">Máquinas</h6>
                     <div class="card-header-right">
                         <ul class="list-unstyled card-option">
                             <li><i class="ti-minus minimize-card"></i></li>
@@ -21,47 +21,49 @@
                 </div>
                 <div class="card-body">
                     <div class="card-content">
-                        <div class="card bg-light mb-3" style="max-width: 18rem;">
+                     
 
                             <table class="table">
                                 <thead class="thead-title">
                                     <tr>
                                         <th scope="col">#</th>
                                         <th scope="col">Nome</th>
-                                        <th scope="col">SoloIdeal</th>
-                                        <th scope="col">IncidenciaSolar</th>
-                                        <th scope="col">IncidenciaVento</th>
-                                        <th scope="col">Acidez</th>
-                                        <th scope="col">IdEstoque</th>
-                                        <th scope="col">IdFornecedor</th>
-                                        <th scope="col">IdCategoria</th>
-
+                                        <th scope="col">Descricao</th>
+                                        <th scope="col">DataCadastro</th>
+                                        <th scope="col">ValorCadastro</th>
+                                        <th scope="col">VidaUtil</th>
+                                        <th scope="col">DepreciacaoAno</th>
+                                        <th scope="col">DepreciacaoMensal</th>
+                                        <th scope="col">Montadora</th>
+                                        <th scope="col">Fornecedor</th>
 
 
                                     </tr>
                                 </thead>
-                                @**<tbody>
-                                        @foreach (var item in Model.Semente)
-                                        {
-                                            <tr>
-                                                <th scope="row"></th>
-                                                <td>@Html.DisplayFor(modelItem => item.Nome)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.SoloIdeal)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.IncSolar)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.IncVento)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.Acidez)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.IdEstoque)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.IdFornecedor)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.IdCategoria)</td>
+                                <tbody>
+                                    @* @foreach (var item in Model.Maquina)
+        {
+            <tr>
+                <th scope="row"></th>
+                <td>@Html.DisplayFor(modelItem => item.Nome)</td>
+                <td>@Html.DisplayFor(modelItem => item.Descricao)</td>
+                <td>@Html.DisplayFor(modelItem => item.DataCadastro)</td>
+                <td>@Html.DisplayFor(modelItem => item.ValorCadastro)</td>
+                <td>@Html.DisplayFor(modelItem => item.VidaUtil)</td>
+                <td>@Html.DisplayFor(modelItem => item.DepreciacaoAno)</td>
+                <td>@Html.DisplayFor(modelItem => item.DepreciacaoMensal)</td>
+                <td>@Html.DisplayFor(modelItem => item.Montadora)</td>
+                <td>@Html.DisplayFor(modelItem => item.Fornecedor)</td>
 
 
 
 
 
-                                            </tr>
-                                        }
-                                    </tbody>*@
-@*tabela p teste do modal*@
+            </tr>
+        }
+                                    *@
+                                </tbody>
+                                @*tabela p teste, quando tiver o banco, descomente a outra e apague esta*@
                                 <tbody>
 
                                     <tr class="linha">
@@ -74,18 +76,17 @@
                                         <td>Estoque</td>
                                         <td>Fornecedor</td>
                                         <td>Categoria</td>
+                                        <td>Categoria</td>
                                     </tr>
 
                                 </tbody>
 
 
 
-                        </div>
+</div>
                     </div>
                 </div>
-                <div class="card-content">
-                    <div class="card border-success mb-3" style="max-width: 18rem;">
-                        <div class="card-body text-success">
+              
 
                             </p>
                         </div>
@@ -96,7 +97,6 @@
     </div>
 </div>
 <div id="modal-placeholder"></div>
-<div class="modal-conteudo">teste teste  teste </div>
 <div class="modal fade" id="newmodal" tabindex="-1" role="dialog" data-backdrop="static" />
 
 <environment include="Development">
