--- a/OrganWeb/OrganWeb/Views/Shared/_LoginPartial.cshtml
+++ b/OrganWeb/OrganWeb/Views/Shared/_LoginPartial.cshtml
@@ -25,6 +25,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.RouteLink("LoginRegistro/", "Login")</li>
+        <li>@Html.ActionLink("Registre-se", "Registro", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+        <li>@Html.ActionLink("Logon", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
