--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Funcionario/Equipe.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Funcionario/Equipe.cshtml
@@ -1,8 +1,8 @@
 ﻿
-@model OrganWeb.Areas.Sistema.Models.ViewModels.ViewPragaDoenca
+@model OrganWeb.Areas.Sistema.Models.ViewModels.ViewEquipe
 @{
-    ViewBag.Title = "Equipes";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+                ViewBag.Title = "Equipes";
+                Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <style>
     .modal-conteudo {
@@ -18,7 +18,10 @@
         transform: translate(-50%, -50%);
         display: none;
     }
-</style>
+    </style>
+<link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
 
 <div class="main-body">
     <div class="row">
@@ -35,51 +38,38 @@
                 </div>
                 <div class="card-body">
                     <div class="card-content">
-                        <div class="card bg-light mb-3" style="max-width: 18rem;">
-                            <a class="popup btn btn-add" href="/Sistema/Funcionario/NovaEquipe" style="margin-bottom:20px; margin-top:20px;">+ Nova Equipe</a>
-                            <table class="table">
-                                <thead class="thead-title">
-                                    <tr>
-                                        <th scope="col">#</th>
-                                        <th scope="col">Nome</th>
-                                        <th scope="col">LIDER</th>
-                                        <th scope="col">Desc</th>
-
-
-
-
-
-                                    </tr>
-                                </thead>
-                                @**<tbody>
-                @foreach (var item in Model.Equipe)
-                {
-                    <tr>
-                        <th scope="row"></th>
-                        <td>@Html.DisplayFor(modelItem => item.Nome)</td>
-                        <td>@Html.DisplayFor(modelItem => item.LIDER)</td>
-                        <td>@Html.DisplayFor(modelItem => item.Desc)</td>
-                    </tr>
-                }
-            </tbody>*@
-                                <tbody>
-
-                                    <tr class="linha">
-                                        <th scope="row"></th>
-                                        <td>Praga1</td>
-                                        <td>dodoi</td>
-                                        <td>dodoizitos</td>
-                                    </tr>
-
-                                </tbody>
+                        <div class="tablecontainer">
+                            <div class="overlay"></div>
+                            <div class="card bg-light mb-3" style="max-width: 18rem;">
+                                <a class="popup btn btn-add" href="/Sistema/Funcionario/NovaEquipe" style="margin-bottom:20px; margin-top:20px;">Nova equipe</a>
+                                <table class="table">
+                                    <thead class="thead-title">
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">Nome</th>
+                                            <th scope="col">LIDER</th>
+                                            <th scope="col">Desc</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var item in Model.FunciEquipe)
+                                        {
+                                            <tr>
+                                                <th scope="row"></th>
+                                                <td>@Html.DisplayFor(modelItem => item.Equipe.Nome)</td>
+                                                <td>@Html.DisplayFor(modelItem => item.Funcionario.Pessoa.Nome)</td>
+                                                <td>@Html.DisplayFor(modelItem => item.Equipe.Desc)</td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="card-content">
                     <div class="card border-success mb-3" style="max-width: 18rem;">
                         <div class="card-body text-success">
-
-                            </p>
                         </div>
                     </div>
                 </div>
@@ -87,32 +77,7 @@
         </div>
     </div>
 </div>
-<div id="modal-placeholder"></div>
-<div class="modal-conteudo">
 
-
-
-</div>
-<div class="modal fade" id="newmodal" tabindex="-1" role="dialog" data-backdrop="static" />
-
-<environment include="Development">
-    <script src="~/Scripts/crudmodal.js" asp-append-version="true" defer></script>
-</environment>
-
-<environment exclude="Development">
-    <script src="~/js/crudmodal.min.js" asp-append-version="true" defer></script>
-</environment>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"
-        integrity="sha256-F6h55Qw6sweK+t7SiOJX+2bpSAa3b/fnlrVCJvmEj1A="
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.9/jquery.validate.unobtrusive.min.js"
-        integrity="sha256-paoxpct33kY9fpQlvgC8IokjGq8iqYaVFawgFPg8oz0="
-        crossorigin="anonymous"></script>
-
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 
 
 @* jQuery('.linha').on('click', function () {
@@ -146,6 +111,65 @@
 
         })
     </script>
-}
 
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+
+    <script>
+        var Popup;
+        $(document).ready(function () {
+            $('.tablecontainer').on('click', 'a.popup', function (e) {
+                e.preventDefault();
+                OpenPopup($(this).attr('href'));
+
+            })
+            function OpenPopup(pageUrl) {
+                var $pageContent = $('<div/>');
+                $pageContent.load(pageUrl, function () {
+                    $('#popupForm', $pageContent).removeData('validator');
+                    $('#popupForm', $pageContent).removeData('unobtrusiveValidation');
+                    $.validator.unobtrusive.parse('form');
+                });
+
+                $dialog = $('<div class="popupWindow" style="overflow:auto"></div>')
+                    .html($pageContent)
+                    .dialog({
+                        draggable: false,
+                        autoOpen: false,
+                        resizable: false,
+                        modal: true,
+                        height: 550,
+                        width: 600,
+                        close: function () {
+                            $('.overlay').hide(),
+                                $dialog.dialog('destroy').remove();
+                        }
+                    })
+
+                $('.popupWindow').on('submit', '#popupForm', function (e) {
+                    var url = $('#popupForm')[0].action;
+                    $.ajax({
+                        type: "POST",
+                        url: url,
+                        data: $('#popupForm').serialize(),
+                        success: function (data) {
+                            if (data.status) {
+                                $dialog.dialog('close');
+                                oTable.ajax.reload();
+                            }
+                        }
+                    })
+
+                    e.preventDefault();
+                })
+                $dialog.dialog('open');
+            }
+        })
+    </script>
+}
 
