Create plantio multiselectlist, arrumada pastas semente, maquina

--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Plantio/Detalhes.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Plantio/Detalhes.cshtml
@@ -23,7 +23,7 @@
                     <div class="card-content">
                         <div class="card bg-light mb-3" style="max-width: 18rem;">
                             <div class="card-header">@Html.DisplayFor(model => model.Nome)</div>
-                            <div class="card-body">Iniciado em: @Html.DisplayFor(model => model.DataInício)</div>
+                            <div class="card-body">Iniciado em: @Html.DisplayFor(model => model.DataInicio)</div>
                             <div class="card-body">Termina em: @Html.DisplayFor(model => model.DataColheita)</div>
                             <div class="modal-footer"></div>
                         </div>
