--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/PragaDoenca/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/PragaDoenca/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OrganWeb.Areas.Sistema.Models.Controles.Doenca>
+﻿@model IEnumerable<OrganWeb.Areas.Sistema.Models.Praga_e_Doenca.PragaOrDoenca>
 
 @{
     ViewBag.Title = "Doenças";
