--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/PragaDoenca/PragaDoenca.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/PragaDoenca/PragaDoenca.cshtml
@@ -53,6 +53,7 @@
                                         </tr>
                                     }
                                 </tbody>
+                                </table>
                         </div>
                     </div>
                 </div>
