--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Manutencao/Detalhes.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Manutencao/Detalhes.cshtml
@@ -1,33 +1,30 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Ferramentas.ManutencaoMaquina
+﻿@model OrganWeb.Areas.Sistema.Models.Ferramentas.MaquinaManutencao
 @{
     ViewBag.Title = "Detalhes";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Detalhes</h2>
+<div>
+    <h4>Manutenção</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>@Html.DisplayNameFor(model => model.Manutencao.Nome)</dt>
+        <dd>@Html.DisplayFor(model => model.Manutencao.Nome)</dd>
 
-<div class="main-body">
-    <div class="row">
-        <div class="col-md-8">
-            <div class="card">
-                <div class="card-header">
-                    <h6 class="card-title box-title">Plantios</h6>
-                    <div class="card-header-right">
-                        <ul class="list-unstyled card-option">
-                            <li><i class="ti-minus minimize-card"></i></li>
-                            <li><i class="icon-refresh"></i></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card-body">
-                    <div class="card-content">
-                        <div class="card bg-light mb-3" style="max-width: 18rem;">
-                            <div class="card-header">@Html.DisplayFor(model => model.Manutencao.Nome)</div>
-                            <div class="modal-footer"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+        <dt>Máquina</dt>
+        <dd>@Html.DisplayFor(model => model.Maquina.Nome)</dd>
+
+        <dt>@Html.DisplayNameFor(model => model.Manutencao.Data)</dt>
+        <dd>@Html.DisplayFor(model => model.Manutencao.Data)</dd>
+
+        <dt>@Html.DisplayNameFor(model => model.Manutencao.Detalhes)</dt>
+        <dd>@Html.DisplayFor(model => model.Manutencao.Detalhes)</dd>
+
+        <dt>@Html.DisplayNameFor(model => model.Manutencao.ValorPago)</dt>
+        <dd>R$ @Html.DisplayFor(model => model.Manutencao.ValorPago)</dd>
+    </dl>
 </div>
+<p>
+    @Html.ActionLink("Editar", "Editar", new { id = Model.IdManutencao, id2 = Model.IdMaquina }) |
+    @Html.ActionLink("Voltar", "Index")
+</p>
