--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Manutencao/Editar.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Manutencao/Editar.cshtml
@@ -1,64 +1,57 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Ferramentas.ManutencaoMaquina
+﻿@model OrganWeb.Areas.Sistema.Models.Ferramentas.MaquinaManutencao
 
 @using (Html.BeginForm("Editar", "Manutencao", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h6 class="card-title box-title"><i class="icofont icofont-plant"></i>Editar</h6>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+    <div class="form-horizontal">
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.IdManutencao)
+        @Html.HiddenFor(model => model.IdMaquina)
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Máquina:</label>
+            <div class="col-md-10">
+                @Html.DisplayFor(model => model.Maquina.Nome)
             </div>
-            <div class="modal-body">
-                <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
-                <div class="form-horizontal">
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.IdManuntencao)
-
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Máquina:</label>
-                        <div class="col-md-10">
-                            @Html.DisplayFor(model => model.Maquina.Nome)
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Manutencao.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Manutencao.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Manutencao.Nome, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Manutencao.DataManuntencao, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Manutencao.DataManuntencao, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Manutencao.DataManuntencao, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Manutencao.Detalhes, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Manutencao.Detalhes, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Manutencao.Detalhes, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Manutencao.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Manutencao.Nome, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Manutencao.Nome, "", new { @class = "text-danger" })
             </div>
-            <div class="modal-footer">
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" data-save="newmodal" class="btn btn-default" />
-                        <input type="button" value="Cancelar" class="btn btn-danger" data-dismiss="modal" />
-                    </div>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Manutencao.Data, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Manutencao.Data, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Manutencao.Data, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Manutencao.Detalhes, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Manutencao.Detalhes, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Manutencao.Detalhes, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Manutencao.ValorPago, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Manutencao.ValorPago, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Manutencao.ValorPago, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="button" value="Cancelar" class="btn btn-danger" />
+        </div>
     </div>
 }
 
