--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Manutencao/Editar.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Manutencao/Editar.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Manutencao.Data, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Manutencao.Data, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Manutencao.Data, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Manutencao.Data, "", new { @class = "text-danger" })
             </div>
         </div>
