CRUD Despesas funfando

--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Financeiro/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Financeiro/Index.cshtml
@@ -74,7 +74,7 @@
                                     <tr>
                                         <td>@Html.DisplayFor(modelItem => item.Compra)</td>
                                         <td>@Html.DisplayFor(modelItem => item.Data)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Item)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.ItensQtd)</td>
                                         <td>R$ @Html.DisplayFor(modelItem => item.ValorTotal)</td>
                                     </tr>
                                 }
